--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.28.2"
+mypy = "^1.1.1"
+types-requests = "^2.28.11.17"
 
 
 [tool.poetry.group.dev.dependencies]
